BaSP-2022: Final changes to the styles file and the index file to match what was asked

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -89,14 +89,14 @@
                             What is Trackgenix
                         </h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam
-                            pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
-                            voluptates ratione. Modi, aut nobis?
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
+                            a galley of type and scrambled it to make a type specimen book.
                         </p>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, distinctio. Ipsam ad nostrum totam
-                            pariatur ipsa laborum unde libero assumenda reprehenderit quos. Perferendis debitis corporis
-                            voluptates ratione. Modi, aut nobis?
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
+                            a galley of type and scrambled it to make a type specimen book.
                         </p>
                     </div>
                     <img src="assets/img/office-2.jpg" alt="Our software" id="img-1" width="514" height="313">
@@ -108,9 +108,10 @@
                             Our History
                         </h2>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem perferendis reiciendis maxime
-                            dolores omnis, ut ducimus debitis autem, soluta temporibus sapiente eveniet non adipisci. Eum
-                            reiciendis temporibus numquam. Alias, deleniti!
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
+                            a galley of type and scrambled it to make a type specimen book.
+
                         </p>
                         <button>
                             Learn more
@@ -125,9 +126,9 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit
                     illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam
-                    aperiam.Molestias!. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit
-                    illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam
-                    aperiam.Molestias!
+                    aperiam.Molestias!. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem 
+                    natus magnam odit illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt
+                    quam ipsam aperiam.Molestias!
                 </p>
                 <ul>
                     <li>
@@ -158,9 +159,8 @@
                             Subheader
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
-                            nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
-                            necessitatibus reiciendis nesciunt numquam.
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                            been the industry's standard dummy text ever since the 1500s.
                         </p>
                         <button>
                             Learn more
@@ -173,9 +173,8 @@
                             Subheader
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
-                            nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
-                            necessitatibus reiciendis nesciunt numquam. 
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                            been the industry's standard dummy text ever since the 1500s. 
                         </p>
                         <button>
                             Learn more
@@ -190,9 +189,8 @@
                             Subheader
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
-                            nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
-                            necessitatibus reiciendis nesciunt numquam.
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                            been the industry's standard dummy text ever since the 1500s.
                         </p>
                         <button>
                             Learn more
@@ -205,9 +203,8 @@
                             Subheader
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non deserunt minima rerum architecto
-                            nostrum autem, repellat fuga cum error exercitationem commodi illo quos est molestias eaque
-                            necessitatibus reiciendis nesciunt numquam. 
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                            been the industry's standard dummy text ever since the 1500s. 
                         </p>
                         <button>
                             Learn more
