BaSP-W04-2022: Queries for desktop, styling sidebar.

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/sidebar.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/footer.css">
@@ -24,14 +25,14 @@
             <div class="input-buttons">
                 <input type="text" placeholder="Search">
                 <i id="glass" class="fa-solid fa-magnifying-glass"></i>
-                <div class="buttons">
-                    <button>
-                        Log In
-                    </button>
-                    <button id="button-2">
-                        Sign Up
-                    </button>
-                </div>
+            </div>
+            <div class="buttons">
+                <button>
+                    Log In
+                </button>
+                <button id="button-2">
+                    Sign Up
+                </button>
             </div>
             <div class="menu">
                 <span class="titles">
@@ -247,12 +248,14 @@
                     </select>
                     <textarea cols="30" rows="10" placeholder="Write us a message..."></textarea>
                 </form>
-                <button id="button-3">
-                    Send Message
-                </button>
-                <button id="button-4">
-                    Reset
-                </button>
+                <div class="form-buttons">
+                    <button id="button-3">
+                        Send Message
+                    </button>
+                    <button id="button-4">
+                        Reset
+                    </button>
+                </div>
             </section>
             <section class="ordered-lists">
                 <h3>
