--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/sidebar.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/sidebar.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/footer.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -80,183 +80,185 @@
             </div>
         </nav>
         <main class="all-main">
-            <header>
-                <h1>
-                    Trackgenix SA
-                </h1>
-            </header>
-            <section id="home">
-                <div class="article-1">
-                    <div class="article-1-body">
-                        <h2>
-                            What is Trackgenix
-                        </h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
-                            a galley of type and scrambled it to make a type specimen book.
-                        </p>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
-                            a galley of type and scrambled it to make a type specimen book.
-                        </p>
+            <div class="not-ol">
+                <header>
+                    <h1>
+                        Trackgenix SA
+                    </h1>
+                </header>
+                <section id="home">
+                    <div class="article-1">
+                        <div class="article-1-body">
+                            <h2>
+                                What is Trackgenix
+                            </h2>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
+                                a galley of type and scrambled it to make a type specimen book.
+                            </p>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
+                                a galley of type and scrambled it to make a type specimen book.
+                            </p>
+                        </div>
+                        <img src="assets/img/office-2.jpg" alt="Our software" id="img-1" width="514" height="313">
                     </div>
-                    <img src="assets/img/office-2.jpg" alt="Our software" id="img-1" width="514" height="313">
-                </div>
-                <div class="article-2">
-                    <div class="article-2-body">
-                        <h2>
-                            Our History
-                        </h2>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
-                            a galley of type and scrambled it to make a type specimen book.
+                    <div class="article-2">
+                        <div class="article-2-body">
+                            <h2>
+                                Our History
+                            </h2>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
+                                a galley of type and scrambled it to make a type specimen book.
 
-                        </p>
-                        <button>
-                            Learn more
+                            </p>
+                            <button>
+                                Learn more
+                            </button>
+                        </div>
+                        <img src="assets/img/office-1.jpg" alt="Work team reunion" id="img-2" width="435" height="216">
+                    </div>
+                </section>
+                <section id="features" class="features">
+                    <h2>
+                        Features
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit
+                        illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam
+                        aperiam.Molestias!. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem 
+                        natus magnam odit illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt
+                        quam ipsam aperiam.Molestias!
+                    </p>
+                    <ul>
+                        <li>
+                            <span>Item 1:</span> lorem ipsum is simply dummy text of the printin
+                        </li>
+                        <li>
+                            <span>Item 2:</span> lorem ipsum is simply dummy text of the printin
+                        </li>
+                        <li>
+                            <span>Item 3:</span> lorem ipsum is simply dummy text of the printin
+                        </li>
+                        <li>
+                            <span>Item 4:</span> lorem ipsum is simply dummy text of the printin
+                        </li>
+                        <li>
+                            <span>Item 5:</span> lorem ipsum is simply dummy text of the printin
+                        </li>
+                    </ul>
+                </section>
+                <section id="why-trackgenix" class="why-trackgenix">
+                    <h2>
+                        Why Trackgenix?
+                    </h2>
+                    <div class="article-03">
+                        <div class="article-03-body">
+                            <h3>
+                                Subheader
+                            </h3>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                                been the industry's standard dummy text ever since the 1500s.
+                            </p>
+                            <button>
+                                Learn more
+                            </button>
+                        </div>
+                        <img src="assets/img/office-5.jpeg" alt="Work team reunion">
+                    </div>
+                    <div class="article-04">
+                        <div class="article-04-body">
+                            <h3>
+                                Subheader
+                            </h3>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                                been the industry's standard dummy text ever since the 1500s. 
+                            </p>
+                            <button>
+                                Learn more
+                            </button>
+                        </div>
+                        <img src="assets/img/office-6.jpeg" alt="meeting">
+                    </div>
+                    <div class="article-05">
+                        <div class="article-05-body">
+                            <h3>
+                                Subheader
+                            </h3>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                                been the industry's standard dummy text ever since the 1500s.
+                            </p>
+                            <button>
+                                Learn more
+                            </button>
+                        </div>
+                        <img src="assets/img/office-3.jpeg" alt="Our office working area">
+                    </div>
+                    <div class="article-06">
+                        <div class="article-06-body">
+                            <h3>
+                                Subheader
+                            </h3>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
+                                been the industry's standard dummy text ever since the 1500s. 
+                            </p>
+                            <button>
+                                Learn more
+                            </button>
+                        </div>
+                        <img src="assets/img/office-4.jpeg" alt="Our software in display">
+                    </div>
+                </section>
+                <section id="contact-us" class="contact-us">
+                    <h2>
+                        Contact Us
+                    </h2>
+                    <form>
+                        <label for="name">
+                            Name
+                        </label>
+                        <input type="text" placeholder="Insert your name">
+                        <label for="email">
+                            Email
+                        </label>
+                        <input type="email" placeholder="Insert your email">
+                        <label for="contactarea">
+                            Category:
+                        </label>
+                        <select name="area" id="area">
+                            <option value="qa">
+                                Quality Assurance
+                            </option>
+                            <option value="developer">
+                                Developer
+                            </option>
+                            <option value="pm">
+                                Project Manager
+                            </option>
+                            <option value="hr">
+                                Human Resources
+                            </option>
+                        </select>
+                        <textarea cols="30" rows="10" placeholder="Write us a message..."></textarea>
+                    </form>
+                    <div class="form-buttons">
+                        <button id="button-3">
+                            Send Message
+                        </button>
+                        <button id="button-4">
+                            Reset
                         </button>
                     </div>
-                    <img src="assets/img/office-1.jpg" alt="Work team reunion" id="img-2" width="435" height="216">
-                </div>
-            </section>
-            <section id="features" class="features">
-                <h2>
-                    Features
-                </h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit
-                    illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam
-                    aperiam.Molestias!. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem 
-                    natus magnam odit illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt
-                    quam ipsam aperiam.Molestias!
-                </p>
-                <ul>
-                    <li>
-                        <span>Item 1:</span> lorem ipsum is simply dummy text of the printin
-                    </li>
-                    <li>
-                        <span>Item 2:</span> lorem ipsum is simply dummy text of the printin
-                    </li>
-                    <li>
-                        <span>Item 3:</span> lorem ipsum is simply dummy text of the printin
-                    </li>
-                    <li>
-                        <span>Item 4:</span> lorem ipsum is simply dummy text of the printin
-                    </li>
-                    <li>
-                        <span>Item 5:</span> lorem ipsum is simply dummy text of the printin
-                    </li>
-                </ul>
-            </section>
-            <section id="why-trackgenix" class="why-trackgenix">
-                <h2>
-                    Why Trackgenix?
-                </h2>
-                <div class="article-03">
-                    <div class="article-03-body">
-                        <h3>
-                            Subheader
-                        </h3>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                            been the industry's standard dummy text ever since the 1500s.
-                        </p>
-                        <button>
-                            Learn more
-                        </button>
-                    </div>
-                    <img src="assets/img/office-5.jpeg" alt="Work team reunion">
-                </div>
-                <div class="article-04">
-                    <div class="article-04-body">
-                        <h3>
-                            Subheader
-                        </h3>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                            been the industry's standard dummy text ever since the 1500s. 
-                        </p>
-                        <button>
-                            Learn more
-                        </button>
-                    </div>
-                    <img src="assets/img/office-6.jpeg" alt="meeting">
-                </div>
-                <div class="article-05">
-                    <div class="article-05-body">
-                        <h3>
-                            Subheader
-                        </h3>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                            been the industry's standard dummy text ever since the 1500s.
-                        </p>
-                        <button>
-                            Learn more
-                        </button>
-                    </div>
-                    <img src="assets/img/office-3.jpeg" alt="Our office working area">
-                </div>
-                <div class="article-06">
-                    <div class="article-06-body">
-                        <h3>
-                            Subheader
-                        </h3>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                            been the industry's standard dummy text ever since the 1500s. 
-                        </p>
-                        <button>
-                            Learn more
-                        </button>
-                    </div>
-                    <img src="assets/img/office-4.jpeg" alt="Our software in display">
-                </div>
-            </section>
-            <section id="contact-us" class="contact-us">
-                <h2>
-                    Contact Us
-                </h2>
-                <form>
-                    <label for="name">
-                        Name
-                    </label>
-                    <input type="text" placeholder="Insert your name">
-                    <label for="email">
-                        Email
-                    </label>
-                    <input type="email" placeholder="Insert your email">
-                    <label for="contactarea">
-                        Category:
-                    </label>
-                    <select name="area" id="area">
-                        <option value="qa">
-                            Quality Assurance
-                        </option>
-                        <option value="developer">
-                            Developer
-                        </option>
-                        <option value="pm">
-                            Project Manager
-                        </option>
-                        <option value="hr">
-                            Human Resources
-                        </option>
-                    </select>
-                    <textarea cols="30" rows="10" placeholder="Write us a message..."></textarea>
-                </form>
-                <div class="form-buttons">
-                    <button id="button-3">
-                        Send Message
-                    </button>
-                    <button id="button-4">
-                        Reset
-                    </button>
-                </div>
-            </section>
+                </section>
+            </div>
             <section class="ordered-lists">
                 <h3>
                     Trackgenix
