--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -9,11 +9,10 @@
         <link rel="stylesheet" href="css/sidebar.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/5ca5c1dd0e.js" crossorigin="anonymous"></script>
         <title>
@@ -24,7 +23,6 @@
         <nav class="sidebar">
             <div class="input-buttons">
                 <input type="text" placeholder="Search">
-                <i id="glass" class="fa-solid fa-magnifying-glass"></i>
             </div>
             <div class="buttons">
                 <button>
@@ -93,14 +91,14 @@
                                 What is Trackgenix
                             </h2>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
-                                a galley of type and scrambled it to make a type specimen book.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.
                             </p>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
-                                a galley of type and scrambled it to make a type specimen book.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.
                             </p>
                         </div>
                         <img src="assets/img/office-2.jpg" alt="Our software" id="img-1" width="514" height="313">
@@ -111,9 +109,9 @@
                                 Our History
                             </h2>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took 
-                                a galley of type and scrambled it to make a type specimen book.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown
+                                printer took a galley of type and scrambled it to make a type specimen book.
 
                             </p>
                             <button>
@@ -127,30 +125,32 @@
                     <h2>
                         Features
                     </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam odit
-                        illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam ipsam
-                        aperiam.Molestias!. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem 
-                        natus magnam odit illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt
-                        quam ipsam aperiam.Molestias!
-                    </p>
-                    <ul>
-                        <li>
-                            <span>Item 1:</span> lorem ipsum is simply dummy text of the printin
-                        </li>
-                        <li>
-                            <span>Item 2:</span> lorem ipsum is simply dummy text of the printin
-                        </li>
-                        <li>
-                            <span>Item 3:</span> lorem ipsum is simply dummy text of the printin
-                        </li>
-                        <li>
-                            <span>Item 4:</span> lorem ipsum is simply dummy text of the printin
-                        </li>
-                        <li>
-                            <span>Item 5:</span> lorem ipsum is simply dummy text of the printin
-                        </li>
-                    </ul>
+                    <div class="features-body">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque neque dolorem natus magnam
+                            odit illo amet fugiat ad? In labore unde odit exercitationem ratione impedit incidunt quam
+                            ipsam aperiam. Molestias!. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
+                            neque dolorem natus magnam odit illo amet fugiat ad? In labore unde odit exercitationem
+                            ratione impedit incidunt quam ipsam aperiam.Molestias!
+                        </p>
+                        <ul>
+                            <li>
+                                <span>Item 1:</span> lorem ipsum is simply dummy text of the printin
+                            </li>
+                            <li>
+                                <span>Item 2:</span> lorem ipsum is simply dummy text of the printin
+                            </li>
+                            <li>
+                                <span>Item 3:</span> lorem ipsum is simply dummy text of the printin
+                            </li>
+                            <li>
+                                <span>Item 4:</span> lorem ipsum is simply dummy text of the printin
+                            </li>
+                            <li>
+                                <span>Item 5:</span> lorem ipsum is simply dummy text of the printin
+                            </li>
+                        </ul>
+                    </div>
                 </section>
                 <section id="why-trackgenix" class="why-trackgenix">
                     <h2>
@@ -162,8 +162,8 @@
                                 Subheader
                             </h3>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                                been the industry's standard dummy text ever since the 1500s.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s.
                             </p>
                             <button>
                                 Learn more
@@ -177,8 +177,8 @@
                                 Subheader
                             </h3>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                                been the industry's standard dummy text ever since the 1500s. 
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s.
                             </p>
                             <button>
                                 Learn more
@@ -192,8 +192,8 @@
                                 Subheader
                             </h3>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                                been the industry's standard dummy text ever since the 1500s.
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s.
                             </p>
                             <button>
                                 Learn more
@@ -207,8 +207,8 @@
                                 Subheader
                             </h3>
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has 
-                                been the industry's standard dummy text ever since the 1500s. 
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                                has been the industry's standard dummy text ever since the 1500s.
                             </p>
                             <button>
                                 Learn more
